--- a/resources/views/auth/login.hbs
+++ b/resources/views/auth/login.hbs
@@ -76,14 +76,21 @@ h2 {
     <i class="icon ion-logo-nodejs"></i>   
     <h2>{{meta.page_title}}</h2>
     <div class="box">
-		<form action="" method="POST">
-			<input name="email" type="email" placeholder="email">
-			<input name="password" type="password" placeholder="password">
+		<form class="form-action" method="POST">
+			<input id="email" name="email" type="email" placeholder="email">
+			<input id="password" name="password" type="password" placeholder="password">
 			{{!-- <button class="btn btn-default full-width"><span class="glyphicon glyphicon-ok"></span></button> --}}
-			<button id="login" class="btn btn-default full-width"><i class="icon ion-md-checkmark"></i>  </button>
+			<button id="login" class="btn btn-default full-width"><i class="icon ion-md-checkmark"></i></button>
 		</form>
     </div>
   </div>
 </div>
 
 {{> footer }}
+
+
+<script>
+	$(function() {
+		console.log('action');
+	});
+</script>
